eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-api-deployment
  labels:
    app: bookstore-api
spec:
  replicas: 1 # 多少pod运行同一个template
  selector:
    matchLabels: # 选择多少pod有这个label的会运行这个deployment
      app: bookstore-api
  template:
    metadata:
      labels:
        app: bookstore-api
    spec:
      containers:
        - name: bookstore-userinfo-api
          image: 619795905281.dkr.ecr.us-west-2.amazonaws.com/bookstore_ecr:userinfo
          ports:
            - containerPort: 9091

        - name: bookstore-book-api
          image: 619795905281.dkr.ecr.us-west-2.amazonaws.com/bookstore_ecr:book
          imagePullPolicy: Always
          ports:
            - containerPort: 9090

        - name: bookstore-order-api
          image: 619795905281.dkr.ecr.us-west-2.amazonaws.com/bookstore_ecr:order
          ports:
            - containerPort: 9092

        - name: bookstore-purchase-api
          image: 619795905281.dkr.ecr.us-west-2.amazonaws.com/bookstore_ecr:purchase
          ports:
            - containerPort: 8080
