eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-api-service
  annotations:
  kubernetes.io/ingress.class: "nginx"
spec:
  selector:
    app: bookstore-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
