eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "api.getdone.info"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bookstore-api-service
                port:
                  number: 80
